--- a/index.html
+++ b/index.html
@@ -40,19 +40,27 @@
 
         <div class="social-container">
           <a href="#" class="social-link">
-            <svg class="social-icon" width="32" height="32">
+            <svg
+              class="social-icon social-icon-facebook"
+              width="32"
+              height="32"
+            >
               <use href="./images/icons.svg#icon-facebook2"></use>
             </svg>
           </a>
 
           <a href="#" class="social-link">
-            <svg class="social-icon" width="32" height="32">
+            <svg
+              class="social-icon social-icon-instagram"
+              width="32"
+              height="32"
+            >
               <use href="./images/icons.svg#icon-instagram"></use>
             </svg>
           </a>
 
           <a href="#" class="social-link">
-            <svg class="social-icon" width="32" height="32">
+            <svg class="social-icon social-icon-youtube" width="32" height="32">
               <use href="./images/icons.svg#icon-youtube"></use>
             </svg>
           </a>
